only reset marked area when using find/replace all, fdo#53106

Change-Id: I151db5db7bcdf5295e1f67423de8926250ae8ea3